--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tower of Hanoi</title>
-    <link rel="stylesheet" href="/src/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -23,7 +23,7 @@
 
 
 
-    <script src="/src/script.js"></script>
+    <script src="src/script.js"></script>
 </body>
 
 </html>
