--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div id="game">
 
         <div class="tower" id="tower1">
-            <div class="disc4" id="disc1" data-width="4"></div>
-            <div class="disc3" id="disc2" data-width="3"></div>
-            <div class="disc2" id="disc3" data-width="2"></div>
-            <div class="disc1" id="disc3" data-width="1"></div>
+            <div class="disc" id="disc1" data-width="4"></div>
+            <div class="disc" id="disc2" data-width="3"></div>
+            <div class="disc" id="disc3" data-width="2"></div>
+            <div class="disc" id="disc3" data-width="1"></div>
         </div>
 
         <div class="tower" id="tower2"></div>
