--- a/index.html
+++ b/index.html
@@ -15,29 +15,26 @@
     <div id="game">
 
         <div class="tower" id="tower1">
-            <div class="disc" id="disc1" data-width="4"></div>
-            <div class="disc" id="disc2" data-width="3"></div>
-            <div class="disc" id="disc3" data-width="2"></div>
-            <div class="disc" id="disc4" data-width="1"></div>
+
+            <div class="disc" id="disc4" data-width="4"></div>
+            <div class="disc" id="disc3" data-width="3"></div>
         </div>
 
-        <div class="tower" id="tower2"></div>
+        <div class="tower" id="tower2">
+            <div class="disc" id="disc2" data-width="2"></div>
+            <div class="disc" id="disc1" data-width="1"></div>
+        </div>
 
-        <div class="tower" id="tower3"></div>
+
+        <div class="tower" id="tower3">
+            <!-- Tower 3 -->
+        </div>
 
         <div id="hand"></div>
 
     </div>
 
-
-
-
-
-
-
-
-
-
+    <!-- Start scripts -->
     <script src="src/script.js"></script>
 </body>
 
