Game works, as described in requirements from myKenzie. Need to add if statement and winning condition.

--- a/index.html
+++ b/index.html
@@ -12,25 +12,29 @@
 
     <h1>Tower of Hanoi</h1>
 
+    <!-- Start game div -->
     <div id="game">
 
+        <!-- Tower 1 -->
         <div class="tower" id="tower1">
 
             <div class="disc" id="disc4" data-width="4"></div>
             <div class="disc" id="disc3" data-width="3"></div>
         </div>
 
+        <!-- Tower 2 -->
         <div class="tower" id="tower2">
             <div class="disc" id="disc2" data-width="2"></div>
             <div class="disc" id="disc1" data-width="1"></div>
         </div>
 
-
+        <!-- Tower 3 -->
         <div class="tower" id="tower3">
-            <!-- Tower 3 -->
         </div>
 
-        <div id="hand"></div>
+        <!-- Hand -->
+        <div id="hand">
+        </div>
 
     </div>
 
