--- a/index.html
+++ b/index.html
@@ -10,22 +10,27 @@
 
 <body>
 
-    <h1>Tower of Hanoi</h1>
+    <header>
+        <h1>Tower of Hanoi</h1>
+        <br>
+        <h4>Student Team:</h4>
+        <h5>Joseph Dubon &amp; Jennifer Schneider</h5>
+    </header>
 
     <!-- Start game div -->
     <div id="game">
 
         <!-- Tower 1 -->
         <div class="tower" id="tower1">
-
-            <div class="disc" id="disc4" data-width="4"></div>
             <div class="disc" id="disc3" data-width="3"></div>
+            <div class="disc" id="disc1" data-width="1"></div>
+
         </div>
 
         <!-- Tower 2 -->
         <div class="tower" id="tower2">
+            <div class="disc" id="disc4" data-width="4"></div>
             <div class="disc" id="disc2" data-width="2"></div>
-            <div class="disc" id="disc1" data-width="1"></div>
         </div>
 
         <!-- Tower 3 -->
