Added instructions and info to console. Added titles to towers. Adjusted CSS for new elements.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <h1>Tower of Hanoi</h1>
         <br>
         <h4>Student Team:</h4>
-        <h5>Joseph Dubon &amp; Jennifer Schneider</h5>
+        <h5>Joseph Dubon &amp; Jennifer Schneider</h5><br>
+        <em>Please open on the console for more info...</em>
     </header>
 
     <!-- Start game div -->
@@ -22,6 +23,7 @@
 
         <!-- Tower 1 -->
         <div class="tower" id="tower1">
+            <h3>Tower 1</h3>
             <div class="disc" id="disc3" data-width="3"></div>
             <div class="disc" id="disc1" data-width="1"></div>
 
@@ -29,12 +31,14 @@
 
         <!-- Tower 2 -->
         <div class="tower" id="tower2">
+            <h3>Tower 2</h3>
             <div class="disc" id="disc4" data-width="4"></div>
             <div class="disc" id="disc2" data-width="2"></div>
         </div>
 
         <!-- Tower 3 -->
         <div class="tower" id="tower3">
+            <h3>Tower 3</h3>
         </div>
     </div>
     <!-- Hand -->
