--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tower of Hanoi</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
 </head>
 
 <body>
@@ -13,9 +14,11 @@
     <header>
         <h1>Tower of Hanoi</h1>
         <br>
-        <h4>Student Team:</h4>
-        <h5>Joseph Dubon &amp; Jennifer Schneider</h5><br>
-        <em>Please open up the console for more info...</em>
+        <p>Also Known As: The Ice Drill</p><br>
+        <h4>Student Team: Joseph Dubon &amp; Jennifer Schneider</h4><br>
+        <p>Game Objective: Click on colored ice block and stack from <br>
+            largest to smallest (bottom to top) on one ice drill.</p><br><br>
+        <em>Please open up the console for more game dashboard!</em>
     </header>
 
     <!-- Start game div -->
@@ -23,22 +26,22 @@
 
         <!-- Tower 1 -->
         <div class="tower" id="tower1">
-            <h3 class="noMove">Tower 1</h3>
-            <div class="disc" id="disc3" data-width="3"></div>
-            <div class="disc" id="disc1" data-width="1"></div>
+            <h3 class="noMove">Ice Drill 1</h3>
+            <div class="disc animate__animated animate__wobble" id="disc3" data-width="3"></div>
+            <div class="disc animate__animated animate__wobble" id="disc1" data-width="1"></div>
 
         </div>
 
         <!-- Tower 2 -->
         <div class="tower" id="tower2">
-            <h3 class="noMove">Tower 2</h3>
-            <div class="disc" id="disc4" data-width="4"></div>
-            <div class="disc" id="disc2" data-width="2"></div>
+            <h3 class="noMove">Ice Drill 2</h3>
+            <div class="disc animate__animated animate__wobble" id="disc4" data-width="4"></div>
+            <div class="disc animate__animated animate__wobble" id="disc2" data-width="2"></div>
         </div>
 
         <!-- Tower 3 -->
         <div class="tower" id="tower3">
-            <h3 class="noMove">Tower 3</h3>
+            <h3 class="noMove">Ice Drill 3</h3>
         </div>
     </div>
     <!-- Hand -->
