Added lots of CSS to change game to 'drill of ice' -an ice blocked themed tower of hanoi style game. + Some CSS animations with animate.css.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Tower of Hanoi</h1>
         <br>
-        <p>Also Known As: The Ice Drill</p><br>
+        <p>Also Known As: <strong>Drill of Ice</strong></p><br>
         <h4>Student Team: Joseph Dubon &amp; Jennifer Schneider</h4><br>
         <p>Game Objective: Click on colored ice block and stack from <br>
             largest to smallest (bottom to top) on one ice drill.</p><br><br>
