Fixed some typos on main game page and intro message on console.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h4>Student Team: Joseph Dubon &amp; Jennifer Schneider</h4><br>
         <p>Game Objective: Click on colored ice block and stack from <br>
             largest to smallest (bottom to top) on one ice drill.</p><br><br>
-        <em>Please open up the console for more game dashboard!</em>
+        <em>Please open up the console for the game dashboard!</em>
     </header>
 
     <!-- Start game div -->
