--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <!-- Tower 1 -->
         <div class="tower" id="tower1">
-            <h3 class="noMove">Ice Drill 1</h3>
+            <!-- <h3 class="noMove">Ice Drill 1</h3> -->
             <div class="disc animate__animated animate__wobble" id="disc3" data-width="3"></div>
             <div class="disc animate__animated animate__wobble" id="disc1" data-width="1"></div>
 
@@ -35,14 +35,14 @@
 
         <!-- Tower 2 -->
         <div class="tower" id="tower2">
-            <h3 class="noMove">Ice Drill 2</h3>
+            <!-- <h3 class="noMove">Ice Drill 2</h3> -->
             <div class="disc animate__animated animate__wobble" id="disc4" data-width="4"></div>
             <div class="disc animate__animated animate__wobble" id="disc2" data-width="2"></div>
         </div>
 
         <!-- Tower 3 -->
         <div class="tower" id="tower3">
-            <h3 class="noMove">Ice Drill 3</h3>
+            <!-- <h3 class="noMove">Ice Drill 3</h3> -->
         </div>
     </div>
     <!-- Hand -->
