--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>Tower of Hanoi</h1>
         <br>
         <p>Also Known As: <strong>Drill of Ice</strong></p><br>
-        <h4>Student Team: Joseph Dubon &amp; Jennifer Schneider</h4><br>
+        <h4>Student Team: Joseph Dubon</h4><br>
         <p>Game Objective: Click on colored ice block and stack from <br>
             largest to smallest (bottom to top) on one ice drill.</p><br><br>
         <em>Please open up the console for the game dashboard!</em>
